--- a/public/css/main.css
+++ b/public/css/main.css
@@ -45,20 +45,33 @@ body {
   height: 100vh;
   z-index: -10;
   position: fixed;
+  background-image: url("../img/background-s.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: center top;
-  background-image: url(../img/background-xl@2x.jpg);
-  /*    @include media(xl){
-          background-image: url(../img/background-xl.jpg); 
-          @include media-retina{
-              background-image: url(../img/background-xl@2x.jpg); 
-          }
-      }*/ }
-  .background--transparent {
-    pointer-events: none;
-    z-index: 5;
-    background-image: url(../img/header-background-xl@2x.png); }
+  background-position: center top; }
+  @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+    .background {
+      background-image: url("../img/background-s@2x.jpg"); } }
+  @media (min-width: 37.5em) {
+    .background {
+      background-image: url("../img/background-m.jpg"); } }
+  @media only screen and (min-width: 37.5em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 37.5em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 37.5em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 37.5em) and (min-device-pixel-ratio: 2), only screen and (min-width: 37.5em) and (min-resolution: 192dpi), only screen and (min-width: 37.5em) and (min-resolution: 2dppx) {
+    .background {
+      background-image: url("../img/background-m@2x.jpg"); } }
+
+  @media (min-width: 56.25em) {
+    .background {
+      background-image: url("../img/background-l.jpg"); } }
+  @media only screen and (min-width: 56.25em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 56.25em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 56.25em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 56.25em) and (min-device-pixel-ratio: 2), only screen and (min-width: 56.25em) and (min-resolution: 192dpi), only screen and (min-width: 56.25em) and (min-resolution: 2dppx) {
+    .background {
+      background-image: url("../img/background-l@2x.jpg"); } }
+
+  @media (min-width: 75em) {
+    .background {
+      background-image: url("../img/background-xl.jpg"); } }
+  @media only screen and (min-width: 75em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 75em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 75em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 75em) and (min-device-pixel-ratio: 2), only screen and (min-width: 75em) and (min-resolution: 192dpi), only screen and (min-width: 75em) and (min-resolution: 2dppx) {
+    .background {
+      background-image: url("../img/background-xl@2x.jpg"); } }
 
 .header {
   display: flex;
@@ -218,7 +231,34 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  background-image: url("../img/background-s.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top; }
+  @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+    .video-overlay {
+      background-image: url("../img/background-s@2x.jpg"); } }
+  @media (min-width: 37.5em) {
+    .video-overlay {
+      background-image: url("../img/background-m.jpg"); } }
+  @media only screen and (min-width: 37.5em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 37.5em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 37.5em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 37.5em) and (min-device-pixel-ratio: 2), only screen and (min-width: 37.5em) and (min-resolution: 192dpi), only screen and (min-width: 37.5em) and (min-resolution: 2dppx) {
+    .video-overlay {
+      background-image: url("../img/background-m@2x.jpg"); } }
+
+  @media (min-width: 56.25em) {
+    .video-overlay {
+      background-image: url("../img/background-l.jpg"); } }
+  @media only screen and (min-width: 56.25em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 56.25em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 56.25em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 56.25em) and (min-device-pixel-ratio: 2), only screen and (min-width: 56.25em) and (min-resolution: 192dpi), only screen and (min-width: 56.25em) and (min-resolution: 2dppx) {
+    .video-overlay {
+      background-image: url("../img/background-l@2x.jpg"); } }
+
+  @media (min-width: 75em) {
+    .video-overlay {
+      background-image: url("../img/background-xl.jpg"); } }
+  @media only screen and (min-width: 75em) and (-webkit-min-device-pixel-ratio: 2), only screen and (min-width: 75em) and (min--moz-device-pixel-ratio: 2), only screen and (min-width: 75em) and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-width: 75em) and (min-device-pixel-ratio: 2), only screen and (min-width: 75em) and (min-resolution: 192dpi), only screen and (min-width: 75em) and (min-resolution: 2dppx) {
+    .video-overlay {
+      background-image: url("../img/background-xl@2x.jpg"); } }
 
 .video-overlay__video {
   min-width: 100%;
