--- a/public/scss/app/sections/background.scss
+++ b/public/scss/app/sections/background.scss
@@ -5,19 +5,6 @@
     height: 100vh;
     z-index: z-index(background);
     position: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center top;
-    background-image: url(../img/background-xl@2x.jpg); 
-    &--transparent{
-        pointer-events: none;
-        z-index: z-index(background-overlay);
-        background-image: url(../img/header-background-xl@2x.png); 
-    }
-    /*    @include media(xl){
-            background-image: url(../img/background-xl.jpg); 
-            @include media-retina{
-                background-image: url(../img/background-xl@2x.jpg); 
-            }
-        }*/
+    @include media-background-image($backgorund-images);
+
 }
