--- a/public/scss/app/sections/video-overlay.scss
+++ b/public/scss/app/sections/video-overlay.scss
@@ -5,6 +5,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    @include media-background-image($backgorund-images);
 }
 
 .video-overlay__video{
