--- a/public/scss/app/variables.scss
+++ b/public/scss/app/variables.scss
@@ -10,6 +10,7 @@ video: -100
 $color-primary: black;
 $color-secondary: white;
 $color-terciary: #DA0E16;
+$color-quartenary: #383a71;
 
 //main
 $main-paddings-top-breakpoint-above:(xl: 102.85, m: 65);
