Paragraph link styling, removing red borders

--- a/public/scss/app/typography/paragraph.scss
+++ b/public/scss/app/typography/paragraph.scss
@@ -20,4 +20,8 @@
         border: rem(1.8) solid $color-secondary;
         padding: 1em;
     }
+    a{
+        color: $color-secondary;
+        text-decoration: underline;
+    }
 }
